<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:translationZ="2dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:background="@drawable/round_12dp"
    android:backgroundTint="@color/red"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/round_12dp"
        android:orientation="horizontal"
        android:padding="14dp"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_weight="0.1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_info" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:layout_weight="2.6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/black"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="@string/tools_row_dashboard_name" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="@string/tools_row_dashboard_description" />

        </LinearLayout>

        <TextView
            android:id="@+id/alerts"
            android:visibility="gone"
            android:layout_width="25dp"
            android:layout_weight="0"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/black"
            android:textColor="@color/white"
            android:background="@drawable/round_12dp"
            android:backgroundTint="@color/red"
            android:layout_height="25dp"
            android:text="@string/alerts" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:contentDescription="@string/rightArrow"
            android:src="@drawable/ic_right"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>