<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:elevation="0dp"
    android:layout_width="match_parent"
    app:cardCornerRadius="0dp"
    android:background="@color/background"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="500dp"
            android:layout_height="500dp"
            app:layout_constraintBottom_toBottomOf="@+id/include_scan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_asyncUpdates="automatic"
            app:lottie_autoPlay="true"
            app:lottie_colorFilter="@color/progress"
            app:lottie_clipToCompositionBounds="true"
            app:lottie_enableMergePathsForKitKatAndAbove="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/dashboard_animation"
            app:lottie_renderMode="hardware"
            app:lottie_speed="0.8" />

        <include
            android:id="@+id/include_scan"
            layout="@layout/include_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/include_scan">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_12dp"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout3">


                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_circle"
                    android:backgroundTint="@color/blue"
                    android:padding="16dp"
                    android:src="@drawable/ic_device_info"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/black"
                    android:text="@string/tools_row_dashboard_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:translationZ="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/regular"
                    android:text="@string/description" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/TextAppearance.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_12dp"
                    android:backgroundTint="@color/blue"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/scan"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:focusable="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_12dp"
                android:orientation="vertical"
                android:padding="16dp"
                android:weightSum="3"
                app:layout_constraintStart_toStartOf="parent">


                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_circle"
                    android:backgroundTint="@color/blue"
                    android:padding="12dp"
                    android:src="@drawable/ic_virus"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/black"
                    android:text="@string/check_virus"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:translationZ="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/regular"
                    android:text="@string/description" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/TextAppearance.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_12dp"
                    android:backgroundTint="@color/blue"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/check"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:focusable="true" />

            </LinearLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:translationZ="5dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="end|bottom"
        android:layout_height="match_parent">

        <include
            android:id="@+id/bottom_sheet"
            layout="@layout/bottom_sheet_dashboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_anchorGravity="bottom|center"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>